Сетки страниц на флексах, исправил переполнения

--- a/catalog.html
+++ b/catalog.html
@@ -144,55 +144,64 @@
           <li class="catalo-card">
             <img class="catalo-card-image" width="300" height="212" src="images/result_1.jpg" alt="Вид на звездное небо из пещеры">
             <h3 class="catalo-card-title">Amara Resort & Spa</h3>
-            <span class="catalo-card-apartments-type">Гостиница</span>
-            <span class="catalo-card-price">От 4000 ₽</span>
-            <a class="btn btn-brown" href="#">подробнее</a>
-            <button class="btn btn-blue">в избранное</button>
-            <span class="catalo-card-star star-4">
-              <b class="visually-hidden">4 звезды</b>
-            </span>
-            <span class="catalo-card-raiting">Рейтинг: 8,5</span>
+            <div class="catalo-card-description">
+              <span class="catalo-card-apartments-type">Гостиница</span>
+              <span class="catalo-card-price">От 4000 ₽</span>
+              <a class="btn btn-brown btn-sm" href="#">подробнее</a>
+              <button class="btn btn-blue btn-sm">в избранное</button>
+              <span class="catalo-card-star star-4">
+                <b class="visually-hidden">4 звезды</b>
+              </span>
+              <span class="catalo-card-raiting">Рейтинг: 8,5</span>
+            </div>
+
           </li>
           <li class="catalo-card">
             <img class="catalo-card-image" width="300" height="212" src="images/result_3.jpg" alt="Вид на горы на фоне серых туч с радугой">
             <h3 class="catalo-card-title">Villas at Poco Diablo</h3>
-            <span class="catalo-card-apartments-type">Гостиница</span>
-            <span class="catalo-card-price">От 5000 ₽</span>
-            <a class="btn btn-brown" href="#">подробнее</a>
-            <button class="btn btn-green">в избранном</button>
-            <span class="catalo-card-star star-4">
-              <b class="visually-hidden">4 звезды</b>
-            </span>
-            <span class="catalo-card-raiting">Рейтинг: 9,2</span>
+            <div class="catalo-card-description">
+              <span class="catalo-card-apartments-type">Гостиница</span>
+              <span class="catalo-card-price">От 5000 ₽</span>
+              <a class="btn btn-brown btn-sm" href="#">подробнее</a>
+              <button class="btn btn-green btn-sm">в избранном</button>
+              <span class="catalo-card-star star-4">
+                <b class="visually-hidden">4 звезды</b>
+              </span>
+              <span class="catalo-card-raiting">Рейтинг: 9,2</span>
+            </div>
           </li>
           <li class="catalo-card">
             <img class="catalo-card-image" width="300" height="212" src="images/result_2.jpg" alt="Вид на горы на фоне ясного неба">
             <h3 class="catalo-card-title">Desert Quail Inn</h3>
-            <span class="catalo-card-apartments-type">Гостиница</span>
-            <span class="catalo-card-price">От 2500 ₽</span>
-            <a class="btn btn-brown" href="#">подробнее</a>
-            <button class="btn btn-blue">в избранное</button>
-            <span class="catalo-card-star star-3">
-              <b class="visually-hidden">3 звезды</b>
-            </span>
-            <span class="catalo-card-raiting">Рейтинг: 6,9</span>
+            <div class="catalo-card-description">
+              <span class="catalo-card-apartments-type">Гостиница</span>
+              <span class="catalo-card-price">От 2500 ₽</span>
+              <a class="btn btn-brown btn-sm" href="#">подробнее</a>
+              <button class="btn btn-blue btn-sm">в избранное</button>
+              <span class="catalo-card-star star-3">
+                <b class="visually-hidden">3 звезды</b>
+              </span>
+              <span class="catalo-card-raiting">Рейтинг: 6,9</span>
+            </div>
           </li>
           <li class="catalo-card">
             <img class="catalo-card-image" width="300" height="212" src="images/result_4.jpg" alt="Вид на горы с оранжевым закатом">
             <h3 class="catalo-card-title">GreenTree Inn</h3>
-            <span class="catalo-card-apartments-type">Гостиница</span>
-            <span class="catalo-card-price">От 1500 ₽</span>
-            <a class="btn btn-brown" href="#">подробнее</a>
-            <button class="btn btn-blue">в избранное</button>
-            <span class="catalo-card-star star-2">
-              <b class="visually-hidden">2 звезды</b>
-            </span>
-            <span class="catalo-card-raiting">Рейтинг: 5,0</span>
+            <div class="catalo-card-description">
+              <span class="catalo-card-apartments-type">Гостиница</span>
+              <span class="catalo-card-price">От 1500 ₽</span>
+              <a class="btn btn-brown btn-sm" href="#">подробнее</a>
+              <button class="btn btn-blue btn-sm">в избранное</button>
+              <span class="catalo-card-star star-2">
+                <b class="visually-hidden">2 звезды</b>
+              </span>
+              <span class="catalo-card-raiting">Рейтинг: 5,0</span>
+            </div>
           </li>
         </ol>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="btn btn-light pagination-link pagination-current"><span>1</span></a>
+            <a class="btn btn-light pagination-link pagination-current">1</a>
           </li>
           <li class="pagination-item">
             <a class="btn btn-blue pagination-link" href="#">2</a>
@@ -207,23 +216,23 @@
             <a class="pagination-link pagination-skip">...</a>
           </li>
           <li class="pagination-item">
-            <a class="btn btn-blue pagination-link" href="#">10</a>
+            <a class="btn btn-blue pagination-link" href="#">1000000</a>
           </li>
         </ul>
       </section>
 
       <!-- Рассылка -->
       <section class="subscribe without-bg">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <h2 class="section-header subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">
           Только полезная информация и никакого спама,<br> честное бойскаутское!
         </p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
+        <form class="subscribe-email-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="subscribe-email">
             Укажите ваш email
           </label>
           <input class="subscribe-email" placeholder="Ваш e-mail" type="email" id="subscribe-email">
-          <button class="btn btn-blue" type="submit">Подписаться</button>
+          <button class="btn btn-blue btn-lg btn-send-email" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -248,7 +257,9 @@
           </a>
         </li>
       </ul>
-      <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <div class="footer-phone-container">
+        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </div>
       <a class="html-academy-link" href="https://htmlacademy.ru">
         <img class="html-academy-image" width="115" height="33" src="images/html_academy.svg" alt="Логотип .html academy">
       </a>
