Размер поля ввода фиксированный

--- a/catalog.html
+++ b/catalog.html
@@ -109,8 +109,8 @@
             <input class="range-amount" type="range" name="range-amount" min="0" max="9000">
           </fieldset>
           <div class="filter-form-actions">
-            <input class="btn btn-blue" type="submit" value="Применить">
-            <input class="btn btn-transparent" type="reset" value="Сбросить">
+            <input class="btn btn-blue btn-sm" type="submit" value="Применить">
+            <input class="btn btn-transparent btn-sm" type="reset" value="Сбросить">
           </div>
         </form>
       </section>
@@ -216,7 +216,7 @@
             <a class="pagination-link pagination-skip">...</a>
           </li>
           <li class="pagination-item">
-            <a class="btn btn-blue pagination-link" href="#">1000000</a>
+            <a class="btn btn-blue pagination-link" href="#">10</a>
           </li>
         </ul>
       </section>
