--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Каталог гостиниц города  "Седона"</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
   </head>
   <body>
 
@@ -55,7 +56,7 @@
     <main class="catalog-main">
 
       <section class="filter">
-        <header class="catalog-header">
+        <header class="catalog-header-filter">
           <h1 class="catalog-header-title">Гостиницы Седоны</h1>
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
@@ -73,40 +74,57 @@
           <fieldset class="filter-group">
             <legend class="filter-title">Инфраструктура:</legend>
               <label class="control">
-                <input class="control-input" type="checkbox" name="infrastructure" value="swimming" checked>
-                Бассейн
+                <input class="visually-hidden control-input" type="checkbox" name="infrastructure" value="swimming" checked>
+                <span class="checkbox-mark"></span>
+                <span class="control-text">Бассейн</span>
               </label>
               <label class="control">
-                <input class="control-input" type="checkbox" name="infrastructure" value="parking" checked>
-                Парковка
+                <input class="visually-hidden control-input" type="checkbox" name="infrastructure" value="swimming" checked>
+                <span class="checkbox-mark"></span>
+                <span class="control-text">Парковка</span>
               </label>
               <label class="control">
-                <input class="control-input" type="checkbox" name="infrastructure" value="wi-fi">
-                Wi-Fi
+                <input class="visually-hidden control-input" type="checkbox" name="infrastructure" value="swimming" checked>
+                <span class="checkbox-mark"></span>
+                <span class="control-text">Wi-Fi</span>
               </label>
           </fieldset>
           <fieldset class="filter-group">
-            <legend class="filter-title">Тип жилья:</legend>
+            <legend class="filter-title">Тип Жилья:</legend>
               <label class="control">
-                <input class="control-input" type="radio" name="apartments" value="hotel" checked>
-                Гостиница
+                <input class="visually-hidden control-input" type="radio" name="apartments" value="hotel" checked>
+                <span class="radio-mark"></span>
+                <span class="control-text">Гостиница</span>
               </label>
               <label class="control">
-                <input class="control-input" type="radio" name="apartments" value="motel">
-                Мотель
+                <input class="visually-hidden control-input" type="radio" name="apartments" value="hotel" checked>
+                <span class="radio-mark"></span>
+                <span class="control-text">Мотель</span>
               </label>
               <label class="control">
-                <input class="control-input" type="radio" name="apartments" value="apartments">
-                Апартаменты
+                <input class="visually-hidden control-input" type="radio" name="apartments" value="hotel" checked>
+                <span class="radio-mark"></span>
+                <span class="control-text">Апартаменты</span>
               </label>
           </fieldset>
-          <fieldset class="filter-group">
+          <fieldset class="filter-group group-range-amount">
             <legend class="filter-title">Стоимость, ₽:</legend>
             <div class="filter-amount-range">
-              <input class="input-amount" type="number" name="from-amount" value="0">
-              <input class="input-amount" type="number" name="to-amount" value="9000">
+              <div class="filter-amount-range-wrapper">
+                <input class="input-amount" type="number" name="from-amount" value="0">
+                <span>от</span>
+              </div>
+              <div class="filter-amount-range-wrapper">
+                <input class="input-amount" type="number" name="to-amount" value="9000">
+                <span>до</span>
+              </div>
             </div>
-            <input class="range-amount" type="range" name="range-amount" min="0" max="9000">
+            <div class="range-amount">
+              <div class="range-bar">
+                <button type="button" class="range-min"></button>
+                <button type="button" class="range-max"></button>
+              </div>
+            </div>
           </fieldset>
           <div class="filter-form-actions">
             <input class="btn btn-blue btn-sm" type="submit" value="Применить">
@@ -124,18 +142,49 @@
           </select>
           <ul class="visible-type-list">
             <li class="visible-type-item">
-              <a class="btn" href="#">
+              <a class="btn btn-visible-type btn-visible-type-selected" href="#">
                 <span class="visually-hidden">Показать карточки</span>
+                <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_143292_168)">
+                    <path d="M4 0H0V6H4V0Z" fill="black"/>
+                    <path d="M16 0H12V6H16V0Z" fill="black"/>
+                    <path d="M10 0H6V6H10V0Z" fill="black"/>
+                    <path d="M4 8H0V14H4V8Z" fill="black"/>
+                    <path d="M16 8H12V14H16V8Z" fill="black"/>
+                    <path d="M10 8H6V14H10V8Z" fill="black"/>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_143292_168">
+                      <rect width="16" height="14" fill="white"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+
               </a>
             </li>
             <li class="visible-type-item">
-              <a class="btn" href="#">
+              <a class="btn btn-visible-type" href="#">
                 <span class="visually-hidden">Показать иначе</span>
+                <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M16 12H0V14H16V12Z" fill="black"/>
+                  <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
+                </svg>
               </a>
             </li>
             <li class="visible-type-item">
-              <a class="btn" href="#">
+              <a class="btn btn-visible-type" href="#">
                 <span class="visually-hidden">Показать список</span>
+                <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2 0H0V2H2V0Z" fill="black"/>
+                  <path d="M16 0H4V2H16V0Z" fill="black"/>
+                  <path d="M2 4H0V6H2V4Z" fill="black"/>
+                  <path d="M16 4H4V6H16V4Z" fill="black"/>
+                  <path d="M2 8H0V10H2V8Z" fill="black"/>
+                  <path d="M16 8H4V10H16V8Z" fill="black"/>
+                  <path d="M2 12H0V14H2V12Z" fill="black"/>
+                  <path d="M16 12H4V14H16V12Z" fill="black"/>
+                </svg>
+
               </a>
             </li>
           </ul>
@@ -149,7 +198,7 @@
               <span class="catalo-card-price">От 4000 ₽</span>
               <a class="btn btn-brown btn-sm" href="#">подробнее</a>
               <button class="btn btn-blue btn-sm">в избранное</button>
-              <span class="catalo-card-star star-4">
+              <span class="catalo-card-star star-4" data-stars="4">
                 <b class="visually-hidden">4 звезды</b>
               </span>
               <span class="catalo-card-raiting">Рейтинг: 8,5</span>
@@ -157,7 +206,7 @@
 
           </li>
           <li class="catalo-card">
-            <img class="catalo-card-image" width="300" height="212" src="images/result_3.jpg" alt="Вид на горы на фоне серых туч с радугой">
+            <img class="catalo-card-image" width="300" height="212" src="images/result_2.jpg" alt="Вид на горы на фоне серых туч с радугой">
             <h3 class="catalo-card-title">Villas at Poco Diablo</h3>
             <div class="catalo-card-description">
               <span class="catalo-card-apartments-type">Гостиница</span>
@@ -171,7 +220,7 @@
             </div>
           </li>
           <li class="catalo-card">
-            <img class="catalo-card-image" width="300" height="212" src="images/result_2.jpg" alt="Вид на горы на фоне ясного неба">
+            <img class="catalo-card-image" width="300" height="212" src="images/result_3.jpg" alt="Вид на горы на фоне ясного неба">
             <h3 class="catalo-card-title">Desert Quail Inn</h3>
             <div class="catalo-card-description">
               <span class="catalo-card-apartments-type">Гостиница</span>
@@ -244,16 +293,25 @@
         <li class="social-item">
           <a class="social-link social-vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Вконтакте</span>
+            <svg width="25" height="15" viewBox="0 0 25 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M24.1164 1.80445C24.2824 1.25845 24.1164 0.856445 23.3214 0.856445H20.6964C20.0284 0.856445 19.7204 1.20345 19.5534 1.58645C19.5534 1.58645 18.2184 4.78245 16.3274 6.85845C15.7154 7.46045 15.4374 7.65145 15.1034 7.65145C14.9364 7.65145 14.6854 7.46045 14.6854 6.91345V1.80445C14.6854 1.14845 14.5014 0.856445 13.9454 0.856445H9.81738C9.40038 0.856445 9.14938 1.16045 9.14938 1.44945C9.14938 2.07045 10.0954 2.21445 10.1924 3.96245V7.76045C10.1924 8.59345 10.0394 8.74444 9.70538 8.74444C8.81538 8.74444 6.65038 5.53345 5.36538 1.85945C5.11638 1.14445 4.86438 0.856445 4.19338 0.856445H1.56638C0.816382 0.856445 0.666382 1.20345 0.666382 1.58645C0.666382 2.26845 1.55638 5.65645 4.81138 10.1374C6.98138 13.1974 10.0364 14.8564 12.8194 14.8564C14.4884 14.8564 14.6944 14.4884 14.6944 13.8534V11.5404C14.6944 10.8034 14.8524 10.6564 15.3814 10.6564C15.7714 10.6564 16.4384 10.8484 17.9964 12.3234C19.7764 14.0724 20.0694 14.8564 21.0714 14.8564H23.6964C24.4464 14.8564 24.8224 14.4884 24.6064 13.7604C24.3684 13.0364 23.5184 11.9854 22.3914 10.7384C21.7794 10.0284 20.8614 9.26345 20.5824 8.88045C20.1934 8.38945 20.3044 8.17044 20.5824 7.73345C20.5824 7.73345 23.7824 3.30745 24.1154 1.80445H24.1164Z" fill="#83B3D3"/>
+            </svg>
           </a>
         </li>
         <li class="social-item">
           <a class="social-link social-tg" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
+            <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z" fill="#83B3D3"/>
+            </svg>
           </a>
         </li>
         <li class="social-item">
           <a class="social-link social-yt" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Ютуб</span>
+            <svg width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z" fill="#83B3D3"/>
+            </svg>
           </a>
         </li>
       </ul>
@@ -261,7 +319,9 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </div>
       <a class="html-academy-link" href="https://htmlacademy.ru">
-        <img class="html-academy-image" width="115" height="33" src="images/html_academy.svg" alt="Логотип .html academy">
+        <svg class="html-academy-image" xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none">
+          <path fill="#000" d="M0 13.2564v2.6h2.5v-2.6H0Zm11.6-8.39995c-1.6 0-2.8.7-3.6 1.7h-.1V.356445h-2V15.8564h2v-5.3c0-2.09995 1.3-3.59995 3.3-3.59995 1.8 0 2.9 1.4 2.9 3.19995v5.7h2V9.75644c.1-3-1.8-4.89999-4.5-4.89999Zm15 .3h-4.8v-3.7h-2v3.8h-1.9v2h1.9v5.99995c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.15645h4.8v-2Zm14.5-.2c-1.6 0-2.9.79999-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29V15.7564h2v-5.4c0-1.99995 1-3.49995 2.6-3.49995 1.5 0 2.4 1 2.4 2.6v6.29995h2v-5.6c0-2.39995 1.4-3.29995 2.6-3.29995 1.5 0 2.4 1 2.4 2.6v6.29995h2V9.25644c.1-2.5-1.4-4.29999-3.9-4.29999Zm6.7 8.09995c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.356445h-2V13.0564Zm-18.9 7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6Zm18.9-5.1c-.5-2.4-2.6-4.1-5.4-4.1-3.4 0-5.6 2.5-5.6 5.6 0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1c-.4 1.3-1.7 2.3-3.3 2.3-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2Zm10.9-2.3c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6Zm17.2-7.3c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6Zm13.2-9.2c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6Zm19.9-1.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4Zm11.2 9.1-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
+        </svg>
       </a>
     </footer>
   </body>
