--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <label for="open-modal" class="navigation-link btn btn-brown btn-sm" href="#">
+            <label for="open-modal" class="navigation-link btn btn-brown btn-sm" >
               Хочу сюда!
             </label>
           </li>
