Отркрытие модалки на значек лупы,на главной страницы

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <ul class="navigation-list action-list">
           <li class="navigation-item">
-            <a class="navigation-link btn-search" href="catalog.html">
+            <label for="open-modal" class="navigation-link btn-search">
               <span class="visually-hidden">Поиск</span>
-            </a>
+            </label>
           </li>
           <li class="navigation-item">
             <a class="navigation-link favorits" href="#">
@@ -45,9 +45,9 @@
             </a>
           </li>
           <li class="navigation-item">
-            <label for="open-modal" class="navigation-link btn btn-brown btn-sm" >
+            <a class="navigation-link btn btn-brown btn-sm" href="#">
               Хочу сюда!
-            </label>
+            </a>
           </li>
         </ul>
       </nav>
