--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <ul class="navigation-list action-list">
           <li class="navigation-item">
-            <label for="open-modal" class="navigation-link btn-search">
+            <a class="navigation-link btn-search">
               <span class="visually-hidden">Поиск</span>
-            </label>
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link favorits" href="#">
@@ -156,7 +156,7 @@
         <p class="search-description">
           Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
-        <a class="btn btn-brown btn-lg" href="catalog.html" >ПОИСК ГОСТИНИЦЫ В Седоне</a>
+        <label for="open-modal" class="btn btn-brown btn-lg" href="catalog.html" >ПОИСК ГОСТИНИЦЫ В Седоне</label>
       </section>
 
       <!-- Рассылка -->
