--- a/catalog.html
+++ b/catalog.html
@@ -121,8 +121,12 @@
             </div>
             <div class="range-amount">
               <div class="range-bar">
-                <button type="button" class="range-min"></button>
-                <button type="button" class="range-max"></button>
+                <button type="button" class="range-min">
+                  <span class="visually-hidden">Уменьшить цену</span>
+                </button>
+                <button type="button" class="range-max">
+                  <span class="visually-hidden">Увеличить цену</span>
+                </button>
               </div>
             </div>
           </fieldset>
