--- a/catalog.html
+++ b/catalog.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Каталог гостиниц города  "Седона"</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
 
     <!-- Шапка страницы -->
-    <header class="main-header">
+    <header data-test="header" class="main-header">
       <a class="logo-link" href="index.html">
         <img class="logo-img" width="140" height="71" src="images/logo.svg" alt="Логотип 'Седоны'">
       </a>
@@ -53,9 +53,9 @@
       </nav>
     </header>
 
-    <main class="catalog-main">
+    <main data-test="main" class="catalog-main">
 
-      <section class="filter">
+      <section data-test="filter" class="filter">
         <header class="catalog-header-filter">
           <h1 class="catalog-header-title">Гостиницы Седоны</h1>
           <ul class="breadcrumbs">
@@ -79,12 +79,12 @@
                 <span class="control-text">Бассейн</span>
               </label>
               <label class="control">
-                <input class="visually-hidden control-input" type="checkbox" name="infrastructure" value="swimming" checked>
+                <input class="visually-hidden control-input" type="checkbox" name="infrastructure" value="parking" checked>
                 <span class="checkbox-mark"></span>
                 <span class="control-text">Парковка</span>
               </label>
               <label class="control">
-                <input class="visually-hidden control-input" type="checkbox" name="infrastructure" value="swimming" checked>
+                <input class="visually-hidden control-input" type="checkbox" name="infrastructure" value="wifi" checked>
                 <span class="checkbox-mark"></span>
                 <span class="control-text">Wi-Fi</span>
               </label>
@@ -97,12 +97,12 @@
                 <span class="control-text">Гостиница</span>
               </label>
               <label class="control">
-                <input class="visually-hidden control-input" type="radio" name="apartments" value="hotel" checked>
+                <input class="visually-hidden control-input" type="radio" name="apartments" value="motel" checked>
                 <span class="radio-mark"></span>
                 <span class="control-text">Мотель</span>
               </label>
               <label class="control">
-                <input class="visually-hidden control-input" type="radio" name="apartments" value="hotel" checked>
+                <input class="visually-hidden control-input" type="radio" name="apartments" value="apartments" checked>
                 <span class="radio-mark"></span>
                 <span class="control-text">Апартаменты</span>
               </label>
@@ -137,7 +137,7 @@
         </form>
       </section>
 
-      <section class="catalog">
+      <section data-test="catalog" class="catalog">
         <div class="catalog-header">
           <h2 class="visually-hidden">Найденные гостиницы</h2>
           <strong class="search-count">Найдено гостиниц: 38</strong>
@@ -146,7 +146,7 @@
           </select>
           <ul class="visible-type-list">
             <li class="visible-type-item">
-              <a class="btn btn-visible-type btn-visible-type-selected" href="#">
+              <a class="btn btn-visible-type btn-visible-type-selected" href="catalog.html?view=tile">
                 <span class="visually-hidden">Показать карточки</span>
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_143292_168)">
@@ -167,7 +167,7 @@
               </a>
             </li>
             <li class="visible-type-item">
-              <a class="btn btn-visible-type" href="#">
+              <a class="btn btn-visible-type" href="catalog.html?view=card">
                 <span class="visually-hidden">Показать иначе</span>
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M16 12H0V14H16V12Z" fill="black"/>
@@ -176,7 +176,7 @@
               </a>
             </li>
             <li class="visible-type-item">
-              <a class="btn btn-visible-type" href="#">
+              <a class="btn btn-visible-type" href="catalog.html?view=list">
                 <span class="visually-hidden">Показать список</span>
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M2 0H0V2H2V0Z" fill="black"/>
@@ -275,7 +275,7 @@
       </section>
 
       <!-- Рассылка -->
-      <section class="subscribe without-bg">
+      <section data-test="subscribe" class="subscribe without-bg">
         <h2 class="section-header subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">
           Только полезная информация и никакого спама,<br> честное бойскаутское!
@@ -284,14 +284,14 @@
           <label class="visually-hidden" for="subscribe-email">
             Укажите ваш email
           </label>
-          <input class="subscribe-email" placeholder="Ваш e-mail" type="email" id="subscribe-email">
+          <input class="subscribe-email" placeholder="Ваш e-mail" type="email" id="subscribe-email" name="email">
           <button class="btn btn-blue btn-lg btn-send-email" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
 
     <!-- Подвал -->
-    <footer class="main-footer">
+    <footer data-test="footer" class="main-footer">
       <h2 class="visually-hidden">Контакты</h2>
       <ul class="social-list">
         <li class="social-item">
